tentando adicionar barra superior

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width" />
   </head>
    <body>
+     <nav id="navBar"><h1>Pessoa estudante da Trybe</h1>
+       <li>Menu</li>
+       <li>Mais fotos</li>
+     </nav><br>
+
     <header id="cabecalho"> 
           <h1 id="titulo"><em>Danilo Leone Estevam</em></h1>
               
@@ -49,7 +54,6 @@
      <aside>
          <h2>Uma passagem sobre meu aprendizado</h2>
         <p>As vezes durante o curso eu fico enroscado em algum detalhe. No dia que aprendemos git e github, me senti muito confuso. Felizmente a Trybe pensou nessa possibilidade e separou horários de plantão, assim podemos sanar essas dificuldades.
-
         </p>
      </aside>
 
