--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Projeto 1 - Lições Aprendidas</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header id="cabecalho">
@@ -16,38 +17,65 @@
     </nav>
   </header>
   <img src="rodrigofarias.jpeg" alt="Foto de Rodrigo Farias" id="minha_foto">
+  <aside id="aside">
+    <section>Sou estudante de Trybe desde 09 de Novembro de 2020 e em apenas 15 dias aprendi a utilizar o bash/shell do sistema unix e seus principais comandos, a versionar arquivos com o git e armazenar em repositórios remotos como o github.</section>
+  </aside>
   <main id="main">
-    <h2>Lições Aprendidas</h2>
-    <ol id="licoes_aprendidas">
-      <li>Unix</li>
-      <li>Bash</li>
-      <li>Git</li>
-      <li>Github</li>
-      <li>Html</li>
-      <li>Css</li>
-      <li>Zoom</li>
-      <li>Slack</li>
-      <li>Colaboração</li>
-      <li>Empatia</li>
-    </ol>
-    <h2>Liçoes a aprender</h2>
-    <ul id="licoes_a_aprender">
-      <li>Javascript</li>
-      <li>Sql</li>
-      <li>Nosql</li>
-      <li>Mysql</li>
-      <li>MongoDB</li>
-      <li>Nodejs</li>
-      <li>Express</li>
-      <li>React</li>
-      <li>Python</li>
-      <li>Lógica de programação</li>
-    </ul>
     <article id="artigo_aprendizado">Sou estudante de Trybe desde 09 de Novembro de 2020 e em apenas 15 dias aprendi a utilizar o bash/shell do sistema unix e seus principais comandos, a versionar arquivos com o git e armazenar em repositórios remotos como o github. Aprendi também a estruturar, tonar acessível, dar sentido e estilizar páginas web utilizando as linguagens de marcação html e estilo css. Estou encantado como a Trybe vem me ajudando a organizar melhor meu tempo, a conhecer pessoas maravilhosas e ter mais empatia. Sim!! Tudo isso em apenas 15 dias!!</article>
-    <aside>
-      <section>Sou estudante de Trybe desde 09 de Novembro de 2020 e em apenas 15 dias aprendi a utilizar o bash/shell do sistema unix e seus principais comandos, a versionar arquivos com o git e armazenar em repositórios remotos como o github.</section>
-    </aside>
+    <section id="licoes">
+      <div class="lado-esquerdo">
+        <h2>Lições Aprendidas</h2>
+        <ol id="licoes_aprendidas">
+          <li>Unix</li>
+          <li>Bash</li>
+          <li>Git</li>
+          <li>Github</li>
+          <li>Html</li>
+          <li>Css</li>
+          <li>Zoom</li>
+          <li>Slack</li>
+          <li>Colaboração</li>
+          <li>Empatia</li>
+        </ol>
+      </div>
+      <div class="lado-direito">
+        <ul id="licoes_a_aprender">
+          <h2>Liçoes a aprender</h2>
+          <li>Javascript</li>
+          <li>Sql</li>
+          <li>Nosql</li>
+          <li>Mysql</li>
+          <li>MongoDB</li>
+          <li>Nodejs</li>
+          <li>Express</li>
+          <li>React</li>
+          <li>Python</li>
+          <li>Lógica de programação</li>
+        </ul>
+      </div>
+    </section>
+    <section id="lista_amigos">
+      <h4>Lista de amigos da Trybe</h4>
+      <table>
+        <tr>
+          <th>Nome</th>
+          <th>Turma</th>
+        </tr>
+        <tr>
+          <td>Diego</td>
+          <td>Turma 09</td>
+        </tr>
+        <tr>
+          <td>Tiago Vallim</td>
+          <td>Turma 09</td>
+        </tr>
+        <tr>
+          <td>Caue Lopes</td>
+          <td>Turma 09</td>
+        </tr>
+      </table>
+    </section>
   </main>
-  <footer id="rodape">Rodapé</footer>
+  <footer id="rodape">Todos os direitos reservados.</footer>
 </body>
 </html>
