Diminuindo o texto do aside

--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@
         </article>
         <aside>
             <p>
-                Estudo desenvolvimento de software na Trybe, uma escola que estimula
-                os alunos a trabalharem em equipe, simulando situações reais de
-                trabalho em um time de desenvolvimento.
+                Estudo desenvolvimento de software na Trybe, uma escola que estimula alunos a trabalharem em equipe, simulando situações reais de em um time de desenvolvimento.
             </p>
         </aside>
     </main>
