--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
         <h1 id="titulo">Lições Aprendidas - Trybe</h1>
     </header>
     <img id="minha_foto" src="minha_foto.jpeg" alt="Foto de Micaela">
-    <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+    <h2>Lições</h2>
+    <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Empatia</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Inspect</li>
+        <li>Semantic HTML</li>
     </ol>
 </body>
 </html>
