--- a/index.html
+++ b/index.html
@@ -9,10 +9,24 @@
 <body>
 
     <header id="cabecalho">
-        <h1 id="titulo">Lições prendidas - Trybe!</h1>
+        <h1 id="titulo">Lições aprendidas - Trybe!</h1>
     </header>
 
     <img id="minha_foto" src="https://avatars1.githubusercontent.com/u/72811671?s=460&u=34008ff57b6cc2524ae87a154c1fe70ef90abe5c&v=4" alt="Cleber Teixeira - Turma 09">
 
+    <h2>Lições</h2>
+
+    <ol id="licoes_aprendidas">
+        <li>Zoom</li>
+        <li>Linux</li>
+        <li>Unix</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Slack</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Inteligência Emocional</li>
+        <li>Empatia</li>
+    </ol>
 </body>
 </html>
