--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <main>
     <section>
       <img id="minha_foto" src="img/104f3ac6-0e37-4b36-9543-6d8cc515c2d8.jpg" alt="Foto de um Homem segurando um bebê">
-      <a href="https://www.linkedin.com/in/andre-chiapetta" target="_brank">André Chiapetta</a>
+      <a href="https://www.linkedin.com/in/andre-chiapetta" target="_blank">André Chiapetta</a>
     </section>
     </main>
 </body>
