Alterando fonts, cores e colocando lista em paralelo

--- a/index.html
+++ b/index.html
@@ -31,34 +31,34 @@
   <img id="minha_foto" src="/rsz_1img_20200517_133641.jpg" alt="">
 
   <section>
-    <aside>
-      <nav>
-        <ol id="licoes_aprendidas">
-          <li>Terminal Shell</li>
-          <li>Git</li>
-          <li>GitHub</li>
-          <li>Como funciona a internet</li>
-          <li>HTML</li>
-          <li>HTML - posicionamento</li>
-          <li>CSS</li>
-          <li>HTML semântico</li>
-          <li>O stomatopoda</li>
-          <li>Projeto</li>
-        </ol>
-
-        <ul id="licoes_a_aprender">
-          <li>JavaScript</li>
-          <li>UI & UX</li>
-          <li>React</li>
-          <li>Nodejs</li>
-          <li>Expressjs</li>
-          <li>SQL & NoSQL/li>
-          <li>Python</li>
-          <li>Soft Skills</li>
-          <li>Front-end</li>
-          <li>Back-end</li>
-        </ul>
-    </aside>
+    <nav class="skills">
+      <ol id="licoes_aprendidas">
+        <li>Terminal Shell</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Como funciona a internet</li>
+        <li>HTML</li>
+        <li>HTML - posicionamento</li>
+        <li>CSS</li>
+        <li>HTML semântico</li>
+        <li>O stomatopoda</li>
+        <li>Projeto</li>
+      </ol>
+    </nav>
+    <nav class="skills">
+      <ul id="licoes_a_aprender">
+        <li>JavaScript</li>
+        <li>UI & UX</li>
+        <li>React</li>
+        <li>Nodejs</li>
+        <li>Expressjs</li>
+        <li>SQL & NoSQL/li>
+        <li>Python</li>
+        <li>Soft Skills</li>
+        <li>Front-end</li>
+        <li>Back-end</li>
+      </ul>
+    </nav>
   </section>
 
   <section>
