--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <body>
         <header id=cabecalho>
             <h1 id="titulo">Iniciando o site!</h1>
+            <nav id="menu">
+                <ul>
+                    <li><a>item 1</a></li>
+                    <li><a>item 2</a></li>
+                    <li><a>item 3</a></li>
+                </ul>
+            </nav>
         </header>
-        <nav>
-
-        </nav>
+        
         <main>
-            <img id="minha_foto">
+            <img id="minha_foto" src="exemplo.png">
             <div>
                 <ol class="lado-esquerdo" id="licoes_aprendidas">
                     <li></li>
