Change article text

--- a/index.html
+++ b/index.html
@@ -59,12 +59,7 @@
         <section id="sobre_mim">
             <article>
                 <p>
-                    Sou estudante de engenharia eletrônica na Universidade Tecnológica Federal do Paraná campus de Campo
-                    Mourão, sempre demonstrei interesse pela área de tecnologia, e hoje busco me aprofundar na área de
-                    embarcados e desenvolvimento de software. Neste ano conheci a <span class="trybe">Trybe</span> e fiz a escolha de participar do
-                    processo seletivo, hoje estou a menos de um mês estudando, mas já posso perceber o quanto evolui e o
-                    longo caminho de aprendizado que existe pela frente. Sou muito feliz por ter preenchido minha
-                    inscrição!
+                    Sou estudante de engenharia eletrônica na Universidade Tecnológica Federal do Paraná campus de Campo Mourão, sempre demonstrei interesse pela área de tecnologia, e hoje busco me aprofundar na área deembarcados e desenvolvimento de software. Neste ano conheci a <span class="trybe">Trybe</span> e fiz a escolha de participar do processo seletivo, hoje estou a menos de um mês estudando, mas já posso perceber o quanto evolui e o longo caminho de aprendizado que existe pela frente!
                 </p>
             </article>
         </section>
