--- a/index.html
+++ b/index.html
@@ -11,37 +11,48 @@
         <header id="cabecalho">
             <h1 id="titulo">Lessons Learned | Trybe</h1>
         </header>
-        <main>
+        <aside id="sidebar">
             <img id="minha_foto" src="pamela.jpeg" alt="Foto de Pamela Anderson Sales">
-            <ol id="licoes_aprendidas"><h2>Lições aprendidas:</h2>
-                <li>Fundamentos do Desenvolvimento Web</li>
-                <li>Unix & Shell</li>
-                <li>Bash</li>
-                <li>Git</li>
-                <li>GitHub</li>
-                <li>Internet: Como ela funciona</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>HTML & CSS: Seletores e Posicionamento</li>
-                <li>HMLT Semantico</li>
-            </ol>
-            <ul id="licoes_a_aprender"><h2>Lições a aprender:</h2>
-                <li>JavaScript</li>
-                <li>CSS Responsivo</li>
-                <li>Jest</li>
-                <li>React</li>
-                <li>RTL</li>
-                <li>Metodologias Ageis</li>
-                <li>SQL</li>
-                <li>Normalização e Modelagem de Banco de Dados</li>
-                <li>MongoDB</li>
-                <li>NodeJS</li>
-            </ul>
-        </main>
-        <article>
-            <h2>Meu aprendizado na Trybe</h2>
-            <p id="meu-aprendizado">Ser estudante da Trybe tem sido um desafio e uma conquista nova a cada dia! Eu, duas semanas atrás, mal sabia o que era HTML e hoje estou eu aqui criando essa página e estilizando-a com CSS. Também aprendi a utilizar o terminal do Linux, GIT e GitHub. Para além disso, também iniciei os estudos de SofSkills com a Trybe, aprendi muito sobre inteligência emocional e mal posso esperar para aprender e evoluir cada dia mais na carreira de Desenvolvimento de Softwares. Você pode conferir mais sobre o curriculo da Trybe clicando nesse <a href="https://www.betrybe.com/formacao" target="_blank">link</a>.</p>
-        </article>
+            <h5>Pamela Anderson Sales</h5>
+            <nav id="navigation">
+                <a href="#licoes_aprendidas">Lições aprendidas.</a><br>
+                <a href="#licoes_a_aprender"></a>Lições a aprender.<br>
+            </nav>
+            <h3>A Trybe e seu espírito de colaboração</h3>
+            <p class="side-article"><em>"A Trybe se preocupa muito em formar pessoas com boas Soft Skills e com eles estou evoluindo muito o meu espírito colaborativo. Aprendi muito a compartilhar o meu conhecimento e a pedir ajuda quando necessário. Trabalhando em equipe tudo fica mais fácil!"</em></p>
+        </aside>
+        <div id="wrap">
+            <main>
+                <ol id="licoes_aprendidas"><h2>Lições aprendidas:</h2>
+                    <li>Fundamentos do Desenvolvimento Web</li>
+                    <li>Unix & Shell</li>
+                    <li>Bash</li>
+                    <li>Git</li>
+                    <li>GitHub</li>
+                    <li>Internet: Como ela funciona</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>HTML & CSS: Seletores e Posicionamento</li>
+                    <li>HMLT Semantico</li>
+                </ol>
+                <ul id="licoes_a_aprender"><h2>Lições a aprender:</h2>
+                    <li>JavaScript</li>
+                    <li>CSS Responsivo</li>
+                    <li>Jest</li>
+                    <li>React</li>
+                    <li>RTL</li>
+                    <li>Metodologias Ageis</li>
+                    <li>SQL</li>
+                    <li>Normalização e Modelagem de Banco de Dados</li>
+                    <li>MongoDB</li>
+                    <li>NodeJS</li>
+                </ul>
+            </main>
+            <article>
+                <h2>Meu aprendizado na Trybe</h2>
+                <p id="meu-aprendizado">Ser estudante da Trybe tem sido um desafio e uma conquista nova a cada dia! Eu, duas semanas atrás, mal sabia o que era HTML e hoje estou eu aqui criando essa página e estilizando-a com CSS. Também aprendi a utilizar o terminal do Linux, GIT e GitHub. Para além disso, também iniciei os estudos de SofSkills com a Trybe, aprendi muito sobre inteligência emocional e mal posso esperar para aprender e evoluir cada dia mais na carreira de Desenvolvimento de Softwares. Você pode conferir mais sobre o curriculo da Trybe clicando nesse <a href="https://www.betrybe.com/formacao" target="_blank">link</a>.</p>
+            </article>
+        </div>
         <footer id="rodape">
             <h6>Todos os direitos reservados, Pamela Sales.</h6>
         </footer>
