editando css, e mudando h1 para h2 para corrigir a semantica

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <header id="cabecalho">
-        <h1 id="titulo">O que eu aprendi na Trybe até agora</h1>
+        <h2 id="titulo">O que eu aprendi na Trybe até agora</h1>
 
         <nav>
             <ul>
@@ -23,7 +23,7 @@
 
     <img id="minha_foto" src="rsz_21perfil.png" alt="me">
 
-    <section>
+    <section id="listas">
         <div id="aprendidas">
             <h3>Lista de coisas aprendidas</h3>
             <ol id="licoes_aprendidas">
@@ -57,7 +57,7 @@
         </div>
     </section>
 
-    <article>
+    <article class="lado-esquerdo">
         <h4>Coisas que eu estou aprendendo</h4>
         <p>
             Estou em um momento de transição de carreira, já tinha feito alguns cursos de programação e decidi ingressar
@@ -67,7 +67,7 @@
         </p>
     </article>
 
-    <section>
+    <section class="lado-direito">
         <aside>
             <h4>Passagem sobre meu aprendizado</h4>
             <p>
