--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
    <body>
      <nav id="navBar"><h1>Pessoa estudante da Trybe</h1>
-       <li>Menu</li>
-       <li>Mais fotos</li>
+       <li><a href="#" >Menu</a></li>
+       <li><a href="#" >Mais fotos</a></li>
      </nav><br>
 
     <header id="cabecalho"> 
