--- a/index.html
+++ b/index.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header id="cabecalho">
+        <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Login</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <article>
+            <img id="minha_foto" src="minhaFoto.jpg">
+            <h4><a href="https://marcosalbuquerque.github.io/Portfolio/">Marcos Albuquerque</a></h3>
+            <section>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur odit, reprehenderit nihil dolor dolorem magni tempora molestiae culpa voluptatum voluptatem nemo delectus. Nihil blanditiis quam vitae vero consequatur nulla atque.</p>
+            </section>
+            <aside>
+                <ol id="licoes_aprendidas">
+                    <li>Lição 1</li>
+                    <li>Lição 2</li>
+                    <li>Lição 3</li>
+                    <li>Lição 4</li>
+                    <li>Lição 5</li>
+                    <li>Lição 6</li>
+                    <li>Lição 7</li>
+                    <li>Lição 8</li>
+                    <li>Lição 9</li>
+                    <li>Lição 10</li>
+                </ol>
+                <ul id="licoes_a_aprender">
+                    <li>Lição 1</li>
+                    <li>Lição 2</li>
+                    <li>Lição 3</li>
+                    <li>Lição 4</li>
+                    <li>Lição 5</li>
+                    <li>Lição 6</li>
+                    <li>Lição 7</li>
+                    <li>Lição 8</li>
+                    <li>Lição 9</li>
+                    <li>Lição 10</li>
+                </ul>
+            </aside>
+        </article>
+    </main>
+    <footer id="rodape">
+        <a href="http://www.google.com">Google</a>
+    </footer>
 </body>
 </html>
