--- a/index.html
+++ b/index.html
@@ -21,35 +21,36 @@
           <p>Começamos os estudos de HTML e CSS, e HTML semântico, que realmente é uma coisa muito importante e interessante, além de ajudar em muito a organizar as idéias.</p>
           <p>Tivemos também nessa semana algumas informações importantes sobre como será nosso auto-conhecimento, os 1:1 irão ajudar a alinharmos as idéias.</p>
         </article>
-      </section>
-      <section id="learned_lessons">
-        <ol id="licoes_aprendidas">
-          <li>Unix</li>
-          <li>Bash</li>
-          <li>Shell</li>
-          <li>Git</li>
-          <li>GitHub</li>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>Internet</li>
-          <li>HTML Semântico</li>
-          <li>Empatia</li>
-        </ol>
-      </section>
-      <section id="lessons_to_learn">
-        <ul id="licoes_a_aprender">
-          <li>JavaScript</li>
-          <li>DOM</li>
-          <li>Forms</li>
-          <li>CSS Responsive</li>
-          <li>ES6</li>
-          <li>SoftSkills</li>
-          <li>Unit Tests</li>
-          <li>React</li>
-          <li>Node</li>
-          <li>SQL</li>
-        </ul>
-      </section>     
+        <section id="learned_lessons">
+          <h3>Lições aprendidas</h3>
+          <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Bash</li>
+            <li>Shell</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Internet</li>
+            <li>HTML Semântico</li>
+            <li>Empatia</li>
+          </ol>
+        </section>
+        <section id="lessons_to_learn">
+          <h3>Lições a aprender</h3>
+          <ul id="licoes_a_aprender">
+            <li>JavaScript</li>
+            <li>DOM</li>
+            <li>Forms</li>
+            <li>CSS Responsive</li>
+            <li>ES6</li>
+            <li>SoftSkills</li>
+            <li>Unit Tests</li>
+            <li>React</li>
+            <li>Node</li>
+            <li>SQL</li>
+          </ul>
+        </section>    
       <aside>
         <h3>Primeiro Projeto</h3>
         <p>Está sendo muito legal colocar o aprendizado em prática, o projeto ajuda a reforçar os temas além de nos colocar em prática com o Git</p>
