rodape feito e listas lado a lado

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <main>
         <img src="Assets/fotoPerfil.jpg" alt="Foto de um homem de frente" id="minha_foto">
+        <a href="https://www.linkedin.com/in/pedro-henrique-497b411b6/" id="linkedin">Linkedin</a>
         <ol id="licoes_aprendidas">
             <li>Unix</li>
             <li>Git</li>
@@ -39,5 +40,8 @@
             <li>SQL</li>
         </ul>
     </main>
+    <footer id="rodape">
+        <p>Todos os direitos reservados, Pedro</p>
+    </footer>
 </body>
 </html>
