--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <header id="cabecalho">
         <h2 id="titulo">O que eu aprendi na Trybe até agora</h1>
 
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="https://www.betrybe.com/" target="_blank">Trybe</a></li>
-            </ul>
-        </nav>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="https://www.betrybe.com/" target="_blank">Trybe</a></li>
+                </ul>
+            </nav>
     </header>
 
     <img id="minha_foto" src="rsz_21perfil.png" alt="me">
@@ -71,12 +71,13 @@
         <aside>
             <h4>Passagem sobre meu aprendizado</h4>
             <p>
-                Ainda tenho muito a aprender, tanto em conhecimentos tecnicos e novas tecnologias como React e Python como
+                Ainda tenho muito a aprender, tanto em conhecimentos tecnicos e novas tecnologias como React e Python
+                como
                 em soft skills de como gerir o tempo e como se comportar em um ambiente de desenvolvimento.
             </p>
         </aside>
     </section>
-    
+
     <table border="1">
         <tr>
             <th>Reino</th>
