--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
       <header id="cabecalho">
           <h1 id="titulo">Lições aprendidas - TRYBE!</h1>
       </header>
+      <img id="minha_foto" src="Marcio3.jpg" alt="Foto de Marcio Fujita">
   </body>
 </html>
