--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
       <header id="cabecalho">
           <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
           <nav id="menu_link">
-              <a href="index.html" target="_blanc">Home</a>
+              <a href="">Home</a>
               <a href="">Login</a>
           </nav>
       </header>
       <img id="minha_foto" src="retrato1.png" alt="foto rafael azevedo"><br>
-      <a href="https://github.com/tryber/sd-09-project-lessons-learned/blob/master/exemplo.png" target="_blanc">Rafael Azevedo</a>
+      <a href="https://github.com/RafaelBiatoAzevedo" target="_blank">Rafael Azevedo</a>
       <table>
           <tr>
               <td>
