--- a/index.html
+++ b/index.html
@@ -58,15 +58,7 @@
 
         <article>
             <p>
-                A formação Trybe é 100% online e conta com aulas ao vivo, onde você
-                interage com sua turma diariamente. Você pode fazer toda sua
-                formação de qualquer local, desde que tenha disponibilidade de
-                segunda a sexta, de 14h às 20h, horário de Brasília, e conquiste a
-                aprovação no processo seletivo da Trybe. Duração aproximada de 12
-                meses com carga horária de 1.500 horas. Na Trybe você vai adquirir o
-                conhecimento técnico e as soft skills necessárias para construir uma
-                carreira de sucesso em desenvolvimento web e conecte se com o
-                mercado de trabalho.
+                A formação Trybe é 100% online e conta com aulas ao vivo, onde você com sua turma diariamente. Você pode fazer toda sua de qualquer local, desde que tenha disponibilidade de a sexta, de 14h às 20h, horário de Brasília, e conquiste a no processo seletivo da Trybe. Duração aproximada de 12 com carga horária de 1.500 horas. Na Trybe você vai adquirir o técnico e as soft skills necessárias para construir uma de sucesso em web e conecte se com o de trabalho.
             </p>
         </article>
         <aside>
