Corrige 8 e 9 (de novo) e adiciona requisito 15

--- a/index.html
+++ b/index.html
@@ -16,50 +16,55 @@
     </header>
     <main>
         <img id="minha_foto" src="pics/profile-pic.jpeg" alt="Minha foto de perfil">
-        <section>
-            <header>
-                <h2>Lições aprendidas</h2>
-            </header>
-            <ol id="licoes_aprendidas">
-                <li>Unix e Bash</li>
-                <li>Versionamento com Git</li>
-                <li>Sicronização do versionamento local com o Github</li>
-                <li>HTML básico</li>
-                <li>CSS Básico</li>
-                <li>Reuniões no Zoom</li>
-                <li>Desenvolvimento de soft skills</li>
-                <li>Desenvolvimento do lado designer</li>
-                <li>Descobrimos quem é o Faraó</li>
-                <li>Aprendemos a nos questionar que animal seríamos</li>
-            </ol>
-        </section>
-        <section>
-            <header>
-                <h2>Lições a aprender</h2>
-            </header>
-            <ul id="licoes_a_aprender">
-                <li>JavaScript</li>
-                <li>Flexbox</li>
-                <li>Grid</li>
-                <li>Testes de softwares</li>
-                <li>React</li>
-                <li>Consumo de APIs</li>
-                <li>Bancos de dados relacionais</li>
-                <li>Bancos de dados não relacionais</li>
-                <li>Python</li>
-                <li>Mais sobre soft skills</li>
-            </ul>
-        </section>
-        <section>
+        <div class="lessons">
+            <section>
+                <div class="lado-esquerdo">
+                    <header>
+                        <h2>Lições aprendidas</h2>
+                    </header>
+                    <ol id="licoes_aprendidas">
+                        <li>Unix e Bash</li>
+                        <li>Versionamento com Git</li>
+                        <li>Sicronização do versionamento local com o Github</li>
+                        <li>HTML básico</li>
+                        <li>CSS Básico</li>
+                        <li>Reuniões no Zoom</li>
+                        <li>Desenvolvimento de soft skills</li>
+                        <li>Desenvolvimento do lado designer</li>
+                        <li>Descobrimos quem é o Faraó</li>
+                        <li>Aprendemos a nos questionar que animal seríamos</li>
+                    </ol>
+                </div>
+            </section>
+            <section>
+                <div class="lado-direito">
+                    <header>
+                        <h2>Lições a aprender</h2>
+                    </header>
+                    <ul id="licoes_a_aprender">
+                        <li>JavaScript</li>
+                        <li>Flexbox</li>
+                        <li>Grid</li>
+                        <li>Testes de softwares</li>
+                        <li>React</li>
+                        <li>Consumo de APIs</li>
+                        <li>Bancos de dados relacionais</li>
+                        <li>Bancos de dados não relacionais</li>
+                        <li>Python</li>
+                        <li>Mais sobre soft skills</li>
+                    </ul>
+                </div>
+            </section>
+        </div>
+        <section class="sem-float">
             <header>
                 <h2>E o que estou achando?</h2>
             </header>
             <article>
-                <p>Nem acredito no quanto evoluí nessas praticamente duas semanas. É estranho como tenho a sensação de que aprendi pouco, mas, parando para analisar realmente, aprendi demais! Nenhuma dessas coisas eu fazia antes e nem imaginava que saberia fazer.</p>
-                <p>Claro que ainda falta muito e depois é necessário continuar estudando, não vou negar. Só que para mim foi uma evolução exponencial e sinto como se fosse capaz de fazer qualquer coisa (e eu sou mesmo kk).<strong>#VQV</strong></p>
+                <p>Nem acredito no quanto evoluí nessas praticamente duas semanas. É estranho como tenho a sensação de que aprendi pouco. Nenhuma dessas coisas eu fazia antes e nem imaginava que saberia fazer. Claro que ainda falta muito e depois é necessário continuar estudando, não vou negar. Só que para mim foi uma evolução exponencial e sinto como se fosse capaz de fazer qualquer coisa (e sou mesmo!).<strong>#VQV</strong></p>
             </article> 
         </section>
-        <section>
+        <section class="sem-float">
             <header>
                 <h2>Um breve resumo sobre o currículo da Trybe</h2>
             </header>
@@ -88,7 +93,7 @@
                     <h2>A centralização vertical</h2>
                 </header>
                 <article>
-                    <p>Após a aula do bloco 3.3, onde estudamos um pouco mais sobre os seletores no CSS, tentei aplicar na página do meu portfólio o conteúdo visto. Criei uma seção a qual precisava centralizar um conteúdo verticalmente e passei o final de semana todo tentando fazê-lo.</p>
+                    <p>Uma novela foi aprender a centralizar verticalmente! Até eu descobrir que no futuro vai ter um jeito mais fácil xD</p>
                 </article>
             </section>
         </aside>
