Added footer styling

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </article>
         <aside>
             <p>
-                <em><strong>FUN FACT:</strong><br>
+                <em><strong id="fun-fact">FUN FACT:</strong><br>
                 Faltando uns 40 minutos pro primeiro dia de reunião da Turma 09 (09/11/2020), meu
                 Lubuntu decidiu simplesmente não funcionar por alguma razão, e tive
                 que às pressas fazer outro pendrive com dual-boot (mas dessa vez baixei o Ubuntu) e formatar
@@ -71,7 +71,8 @@
             </p>
         </aside>
         <footer id="rodape">
-            <em>Webiste desenvolvido por Gabriel Galdino. Todos os direitos reservados.</em>
+            <em>Webiste desenvolvido por <span class="highlight-word">Gabriel Galdino</span>.
+                Todos os direitos reservados <span class="highlight-word">©</span>.</em>
         </footer>
     </body>
 </html>
