Criado elemento nav(menu).

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas</h1>
+        <nav id="menu">
+            <ul>
+                <li><a href="#pagina-principal">Home</a></li>
+                <li><a href="#rodape">Sobre</a></li>
+            </ul>
+        </nav>
     </header>
     <main id="pagina-principal">
         <img id="minha_foto" src="foto.jpg" alt="Foto Felipe Rocha">
@@ -72,7 +78,7 @@
         </aside>
     </main>
     <footer id="rodape">
-        <p>Todos os direitos reservados, Felipe Rocha</p>
+        <p>Todos os direitos reservados, <a href="https://www.linkedin.com/in/felipe-silva-rocha/">Felipe Rocha</a></p>
     </footer>
 </body>
 </html>
