Modify aside text

--- a/index.html
+++ b/index.html
@@ -66,11 +66,7 @@
         <section id="aprendizado">
             <aside>
                 <p>
-                    <em>Algo que prezo muito e vejo que aqui será passado de uma maneira clara é o fluxo de trabalho.
-                        Chegar na
-                        <span class="trybe">Trybe</span> e já receber uma aula de como utilizar o git e aprender o fluxo de como as coisas devem
-                        acontecer
-                        foi ótimo.</em>
+                    <em>Algo que prezo muito e vejo que aqui será passado de uma maneira clara é o fluxo de trabalho. Chegar na <span class="trybe">Trybe</span> e já receber uma aula de como utilizar o git e aprender o fluxo de como as coisas devem acontecer foi ótimo.</em>
                 </p>
             </aside>
         </section>
