Tamanho das fontes, background-color footer

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
             </section>
 
             <section>
-                <article id="artigo-aprendizado">
+                <article id="artigo-aprendizado" class="lado-direito">
                     <h2>Ser um tryber</h2>
                     <p>Estou apenas na terceira semana de estudos na Trybe, e ja estou fazendo o primeiro projeto, que é justamente essa página web. Durante essas semanas consegui entender o funcionamento do git/github, de forma pratica e clara e a utilizar o terminal. Vimos o básico de HTML e CSS, e ja posso contruir páginas sem problemas. Sei que ainda tem muito por vir, e a proxima lição será sobre Javascript. Mal posso esperar para me tornar um desenvolvedor Web Full Stack Jr e trabalhar para mundo 🗺️.</p>
                 </article>
 
-                <aside id="passagem-aprendizado">
+                <aside id="passagem-aprendizado" class="lado-esquerdo">
                     <h3>Aconteceu comigo</h3>
                     <p>Na Trybe, fazemos muitas atividades de sofl skills, uma delas foi o primeiro trabalho em equipe, em que eu e mais 6 colegas eleboramos uma apresentação sobre o funcionamento da internet.</p>
                 </aside>
