Ajustando espços em tags

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1 id="titulo" class="titulos">Lições Aprendidas - Trybe </h1>
     </header> 
     <section class="image">
-        <img id="minha_foto" src="https://avatars3.githubusercontent.com/u/47483029?s=460&u=cdf0eba4ef59445b6b241ba53927707198095d97&v=4" alt="Foto-Diego">  
+      <img id="minha_foto" src="https://avatars3.githubusercontent.com/u/47483029?s=460&u=cdf0eba4ef59445b6b241ba53927707198095d97&v=4" alt="Foto-Diego">  
     </section>
     <main class="lista">
         <section id="lista_licoes_aprendidas">
@@ -28,7 +28,7 @@
                 <li>CSS</li>
             </ol>
         </section>
-        <section id="lista_licoes_aprendidas" >
+        <section id="lista_licoes_a_aprender" >
             <h2 class="titulos">Lições a Aprender</h2>
             <ul id="licoes_a_aprender">
                 <li>Lógica de Programação</li>
@@ -42,8 +42,7 @@
                 <li>SQL</li>
                 <li>MongoDB</li>
             </ul>
-        </section>
-        
+        </section> 
     </main>
 
 </body>
