Colocando imagem, links e rodape

--- a/index.html
+++ b/index.html
@@ -24,22 +24,30 @@
             </div>
             <div id="bem">
             <marquee>Bem-vindo ao meu mundo!</marquee>
-            </div>
-                        
-        </figure>
-        <p id="depoimento">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat fugiat accusantium corporis laboriosam dolore expedita quod doloremque laborum, blanditiis eveniet accusamus, atque maxime voluptatibus corrupti? Maiores quasi iusto odio quidem.
-        </p>
+            </div>                        
+        </figure>  
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim consequatur ratione quo vitae vero ea eaque nulla aut? Impedit distinctio veritatis blanditiis beatae deserunt eveniet cupiditate eaque et cum perspiciatis.</p>      
     </header>
     <main>
         <section>
-            <article>
-
-            </article>
+            <a href="https://www.google.com/" target="_blank">
+            <img src="img/ricefield.jpg" alt="ricefield"></a>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim consequatur ratione quo vitae vero ea eaque nulla aut? Impedit distinctio veritatis blanditiis beatae deserunt eveniet cupiditate eaque et cum perspiciatis.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat tenetur possimus magnam laudantium itaque eaque inventore, odit qui rem. Adipisci est quam minus distinctio, maxime rem maiores expedita fugit perferendis.</p>            
+        </section>
+        <section>
+            <h2>Lições Aprendidas</h2>
+            <ul type="square">
+                <li>Html 5</li>
+                <li>CSS 3</li>
+                <li>Javascript</li>
+                <li>React Native</li>
+                <li>React</li>
+            </ul>
         </section>
     </main>
-    <footer>
-
+    <footer id="rodape">
+        <p>produzido por <a href="https://github.com/" target="_blank">Machitachi</a></p>
     </footer>
 
 </body>
