--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div id="sectionLearn">
                     <section>
                         <h2>Lições Aprendidas</h2>
-                        <ol #licoes_aprendidas>
+                        <ol id="licoes_aprendidas">
                             <li>Git</li>
                             <li>GitHub</li>
                             <li>Internet</li>
@@ -46,7 +46,7 @@
                     </section>
                     <section>
                         <h2>Lições a Aprender</h2>
-                        <ul #licoes_a_aprender>
+                        <ul id="licoes_a_aprender">
                             <li>sao</li>
                             <li>tantas</li>
                             <li>coisas</li>
