Adicionar style em aside.

--- a/index.html
+++ b/index.html
@@ -15,19 +15,21 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">LESSONS LEARNED</h1>
+        <nav id="navegacao">
+            <ul class="listas">
+                <li><a href="https://www.linkedin.com/in/mendoncag/" target="_Blank"><img
+                            src="https://img.shields.io/badge/linkedin-%230077B5.svg?&style=for-the-badge&logo=linkedin&logoColor=white" /></a>
+                </li>
+                <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=gabriel.dev.lop@gmail.com"
+                        target="_Blank"><img
+                            src="https://img.shields.io/badge/gmail-D14836?&style=for-the-badge&logo=gmail&logoColor=white" /></a>
+                </li>
+            </ul>
+        </nav>
     </header>
-    <nav id="navegacao">
-        <ul class="listas">
-            <li><a href="https://www.linkedin.com/in/mendoncag/" target="_Blank"><img
-                        src="https://img.shields.io/badge/linkedin-%230077B5.svg?&style=for-the-badge&logo=linkedin&logoColor=white" /></a>
-            </li>
-            <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=gabriel.dev.lop@gmail.com" target="_Blank"><img
-                        src="https://img.shields.io/badge/gmail-D14836?&style=for-the-badge&logo=gmail&logoColor=white" /></a>
-            </li>
-        </ul>
-    </nav>
+
     <main id="conteudo">
-        <section id="perfil">
+        <section id="perfil" class="fundos_secoes">
             <img id="minha_foto" src="/Images/foto.jpg" alt="Foto de Gabriel">
             <p><strong>Lições aprendidas e Lições a aprender</strong></p>
             <ol id="licoes_aprendidas">
@@ -56,7 +58,7 @@
             </ul>
         </section>
 
-        <article id="artigo">
+        <article id="artigo" class="fundos_secoes exceto_secoes">
             <!--https://gabrielgarciamendonca.github.io/   |   Meu portfólio foi utilizado para buscar alguns textos acerca dos locais no qual eu estudei.-->
             <h2>Historico</h2>
             <section class="cartao_apresentacao">
@@ -81,7 +83,7 @@
             </section>
 
         </article>
-        <section>
+        <section id="aside_breve_passagem" class="fundos_secoes exceto_secoes">
             <aside>
                 <h3>Breve passagem...</h3>
                 <p><strong>Quando?</strong> Foi na época que estava fazendo faculdade.</p>
@@ -90,7 +92,6 @@
             </aside>
         </section>
         <footer id="rodape">
-            <h2>Me procure aqui: </h2>
             <!-- https://github.com/gabrielgarciamendonca/gabrielgarciamendonca/edit/main/README.md  | Utilizado para buscar o endereço da imagem do icone do linkedin -->
             <a href="https://www.linkedin.com/in/mendoncag/" target="_Blank"><img
                     src="https://img.shields.io/badge/linkedin-%230077B5.svg?&style=for-the-badge&logo=linkedin&logoColor=white" /></a>
