--- a/index.html
+++ b/index.html
@@ -55,22 +55,26 @@
       </div>
     </section>
     <section id="lista_amigos">
-      <h4>Lista de amigos da Trybe</h4>
+      <h2>Lista de amigos da Trybe</h4>
       <table>
         <tr>
           <th>Nome</th>
+          <th>Sobrenome</th>
           <th>Turma</th>
         </tr>
         <tr>
           <td>Diego</td>
+          <td>.</td>
           <td>Turma 09</td>
         </tr>
         <tr>
-          <td>Tiago Vallim</td>
+          <td>Tiago</td>
+          <td>Vallim</td>
           <td>Turma 09</td>
         </tr>
         <tr>
-          <td>Caue Lopes</td>
+          <td>Caue</td>
+          <td>Lopes</td>
           <td>Turma 09</td>
         </tr>
       </table>
