--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                 <h2>Meu Aprendizado</h2>
                 <p>Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado </p>
             </article>
+            <aside>
+                <p>Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado Aprendizado </p>
+            </aside>
             <footer id="rodape">
                 <p>
                     Informacoes para contato:<br>
