colocando tag Artigo

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
 </head>
   <img  id="minha_foto" src="https://avatars1.githubusercontent.com/u/68447692?s=60&v=4" alt="foto kamila github">
-<article>
-   <b>
-    A Trybe, desde o início do ano, era um sonho de entrar, nunca me imaginei conquistando-o, 
-    sempre fui negativa na tentativa de fazer qualquer coisa em meu benefício. 
+<article id="artigo">
+   
+    <h2> 2>A Trybe, desde o início do ano, era um sonho de entrar, nunca me imaginei conquistando-o,
+    sempre fui negativa na tentativa de fazer qualquer coisa em meu benefício.
     Ao passar pelo desafio do processo seletivo, que também foi um grande aprendizado, já percebi a
-    minha evolução. No curso introdutório o introdutório de JavaScript, usar algumas 
-    ferramentas como hackerRank, Zoom e 
+    minha evolução. No curso introdutório o introdutório de JavaScript, usar algumas
+    ferramentas como hackerRank, Zoom e
     melhorei a minha comunicação através de entrevistas que é uma fase do processo seletivo da Trybe.
-    As aulas iniciaram em Novembro, desde então o meu aprendizado está sendo bastante intenso, reconhecendo 
-    desafios e superando-os com ajuda do time Trybe. 
- </b>
+    As aulas iniciaram em Novembro, desde então o meu aprendizado está sendo bastante intenso, reconhecendo
+    desafios e superando-os com ajuda do time Trybe.</h2>
+ 
 
 </article>
 
