--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
     <header id="cabecalho">
-        <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+        <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
     </header>
     <img src="thumbnail_Sem título.jpg" alt="Estudante da Trybe" id="minha_foto">
     <main>
