--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   </header>
 
-  <img id="minha_foto" src="/rsz_1img_20200517_133641.jpg" alt="">
+  <!--<img id="minha_foto" src="/rsz_1img_20200517_133641.jpg" alt="">-->
 
   <section>
     <nav class="skills">
