Estilo e layout float

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
         <li>NodeJS</li>
       </ul>
     </section>
-    <section id="lado-esquerdo">
+    <section class="lado-esquerdo">
       <article class="artigo">
         <h2>Sobre o meu aprenizado</h2>
         <p>Estou tendo a oportunidade de aprender programação como nunca tive. Até o momento aprendi com profundidade sobre Bash, Git e GitHub, que são aplicados utilizando o terminal. Vi como tudo ocorre por trás dos panos na internet, como ela funciona ao fazermos uma simples pesquisa. Também aprendi sobre HTML e CSS, e hoje estou aplicando o meu aprendizado construindo esse porrifólio.</p>
       </article>
     </section>
-    <section id="lado-direito">
+    <section class="lado-direito">
       <aside class="artigo">
         <h2>O caminho...</h2>
         <p>A primeira vez que vi sobre Git e GitHub, confesso que fiquei meio preocupada em como eu iria aprender e lembrar de tudo, isso foi antes da Trybe, agora com as aulas e o conteúdo, ficou bem mais fácil de assimilar e a prática do dia a dia ajuda bastante também.</p>
