--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <html lang="pt-BR">
-    <head>
-        <meta charset="UTF-8">
-        <title></title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-    </body>
+  <head>
+    <meta charset="UTF-8">
+    <title></title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <header id="cabecalho">
+      <h1 id="titulo">Lições Aprendidas - Renato Feitosa</h1>
+    </header>
+    <main>
+    </main>
+  </body>
 </html>
