--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 me perguntando: "Será que sou capaz?" "Vou dar conta disso?" <br>
                 Eu só tenho a agrader por todo o suporte que a TRYBE dá para seus alunos, pois
                 eles te deixam com a sensação de que você é capaz de tudo! <br><br>
-                Desde os assuntos mais básicos vistos como usar o Terminal do Linux até o ponto que estamos,
-                a TRYBE tem dado uma experiência incrível que eu não achei ser possível até então. <br>
+                Desde como usar o Terminal do Linux até o ponto que estamos, a TRYBE tem dado
+                uma experiência incrível. <br>
                 Tamo junto galera! <strong>#VQV</strong>
             </p>
         </article>
@@ -65,7 +65,7 @@
                 <em><strong id="fun-fact">FUN FACT:</strong><br>
                 Faltando uns 40 minutos pro primeiro dia de reunião da Turma 09 (09/11/2020), meu
                 Lubuntu decidiu simplesmente não funcionar por alguma razão, e tive
-                que às pressas fazer outro pendrive com dual-boot (mas dessa vez baixei o Ubuntu) e formatar
+                que às pressas fazer outro pendrive com Ubuntu e formatar
                 o notebook nesse meio tempo. Pensa na adrenalina...
                 </em>
             </p>
