--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
         </header>
         <aside id="sidebar">
             <img id="minha_foto" src="pamela.jpeg" alt="Foto de Pamela Anderson Sales">
-            <h5>Pamela Anderson Sales</h5>
+            <h2>Pamela Anderson Sales</h5>
             <nav id="navigation">
                 <a href="#licoes_aprendidas">Lições aprendidas.</a><br>
-                <a href="#licoes_a_aprender"></a>Lições a aprender.<br>
+                <a href="#licoes_a_aprender">Lições a aprender.</a><br>
             </nav>
             <h3>A Trybe e seu espírito de colaboração</h3>
-            <p class="side-article"><em>"A Trybe se preocupa muito em formar pessoas com boas Soft Skills e com eles estou evoluindo muito o meu espírito colaborativo. Aprendi muito a compartilhar o meu conhecimento e a pedir ajuda quando necessário. Trabalhando em equipe tudo fica mais fácil!"</em></p>
+            <section class="side-article"><em>"A Trybe se preocupa muito em formar pessoas com boas Soft Skills e com eles estou evoluindo muito o meu espírito colaborativo. Aprendi muito a compartilhar o meu conhecimento e a pedir ajuda quando necessário. Trabalhando em equipe tudo fica mais fácil!"</em>
+            </section>
         </aside>
         <div id="wrap">
             <main>
@@ -49,12 +50,12 @@
                 </ul>
             </main>
             <article>
-                <h2>Meu aprendizado na Trybe</h2>
+                <h3>Meu aprendizado na Trybe</h2>
                 <p id="meu-aprendizado">Ser estudante da Trybe tem sido um desafio e uma conquista nova a cada dia! Eu, duas semanas atrás, mal sabia o que era HTML e hoje estou eu aqui criando essa página e estilizando-a com CSS. Também aprendi a utilizar o terminal do Linux, GIT e GitHub. Para além disso, também iniciei os estudos de SofSkills com a Trybe, aprendi muito sobre inteligência emocional e mal posso esperar para aprender e evoluir cada dia mais na carreira de Desenvolvimento de Softwares. Você pode conferir mais sobre o curriculo da Trybe clicando nesse <a href="https://www.betrybe.com/formacao" target="_blank">link</a>.</p>
             </article>
         </div>
         <footer id="rodape">
-            <h6>Todos os direitos reservados, Pamela Sales.</h6>
+            <h4>Todos os direitos reservados, Pamela Sales.</h6>
         </footer>
   </body>
 </html>
