Requisito 06 - adicionado rodape ao site com a ID rodape

--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
             </Ul>
         </section>
 
-
     </main>
+
+    <footer id="rodape">
+        <span><em>by IgMR</em></span>
+    </footer>
 </body>
 
 </html>
