--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Copse&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <header id="cabecalho">
-        <h1 id="titulo">Caio Queiroz</h1>
+        <h1 id="titulo">Lições aprendidas na Trybe</h1>
     </header>
-    <img id="minha_foto" src="foto-caio.jpg" alt="Minha foto">
+    <section>
+        <img id="minha_foto" src="foto-caio.jpg" alt="Minha foto">
+        <a href="https://github.com/caio300" target="_blank">Caio Queiroz</a>
+    </section>
+    
     <h2>Lições Aprendidas:</h2>
     <ul id="licoes_aprendidas">
         <li>Unix</li>
