Fixando o título no topo

--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     <h1 id="titulo">Bruna Ferreira</h1>
 </header>
 <body>
-    <img src="rsz_brunaferreira.jpg" id="minha_foto">
+    <img src="rsz_brunaferreira.jpg" id="minha_foto" alt="Minha Foto">
 <article>
     <p>Comecei a desenvolver praticamente do 0. Não tinha quase nada de conhecimento sobre Desenvolvimento Web, não sabia nem mexer no terminal, mas agora já sei! Já sei também até a usar o GitHub, quem diria...
-       Agora, tenho uma boa base de conhecimento sobre HTML e CSS, ainda estou muito longe de "chegar lá", mas já fiz muito mais do que poderia imaginar há 3 semanas atrás.
-       Estou muito animada com o que tem pela frente! 
+       Agora, tenho uma boa base de conhecimento sobre HTML e CSS, ainda estou muito longe de "chegar lá", mas já fiz muito mais do que poderia imaginar há 3 semanas atrás. Estou muito animada com o que tem pela frente! 
     </p>
 </article>
 <aside>
@@ -35,8 +34,7 @@
         <li>Usar o VS Code</li>
         <li>Trabalhar com maior efetividade no HTML e CSS</li>
     </ol>
-</section>
-<section>
+
     <ul id="licoes_a_aprender">
         <li>Entender muito bem o JavaScript</li>
         <li>Ter muitas habilidades com HTML e CSS</li>
