reorganizaçao do codigo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <article>
             <img id="minha_foto" src="minhaFoto.jpg">
-            <h4><a href="https://marcosalbuquerque.github.io/Portfolio/">Marcos Albuquerque</a></h3>
+            <a href="https://marcosalbuquerque.github.io/Portfolio/">Marcos Albuquerque</a>
             <section>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur odit, reprehenderit nihil dolor dolorem magni tempora molestiae culpa voluptatum voluptatem nemo delectus. Nihil blanditiis quam vitae vero consequatur nulla atque.</p>
             </section>
