--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
         </header>
         <main>
             <section>
-                <img id="minha_foto" src="brenno-calado.jpg" alt="brenno-calado.jpg">
-                <ol id="licoes_aprendidas">
+                <div id="gradient-border">
+                    <img id="minha_foto" src="brenno-calado.jpg" alt="brenno-calado.jpg">
+                    <ol id="licoes_aprendidas">
+                </div>
                     <li>Ligou o Ubuntu? Dê um <code>sudo apt-get upgrade</code>!</li>
                     <li>Já deu o seu <code>commit -m</code> hoje? Opa, lá vem bomba...</li>
                     <li><code>Ctrl-c ctrl-v?</code> dê um <code>cp</code> que o dedo agradece!</li>
