--- a/index.html
+++ b/index.html
@@ -21,5 +21,13 @@
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
+
+        <main>
+            <section>
+                <div id="hero-card">
+                  <img id="minha_foto" src="img/hero.jpeg" alt="hero">
+                </div>
+            </section>
+        </main>
     </body>
 </html>
