--- a/index.html
+++ b/index.html
@@ -14,20 +14,22 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="">Home</a></li>
-                    <li><a href="#licoes_aprendidas">Lições aprendidas</a></li>
-                    <li><a href="#licoes_a_aprender">Lições a aprender</a></li>
-                    <li><a href="">Sobre meu aprendizado</a></li>
-                    <li><a href="">Uma breve passagem</a></li>
+                    <li><a href="#licoes_1">Lições aprendidas</a></li>
+                    <li><a href="#licoes_2">Lições a aprender</a></li>
+                    <li><a href="#sobre_aprendizado">Sobre meu aprendizado</a></li>
+                    <li><a href="#breve">Uma breve passagem</a></li>
+                    <li><a class="extra" href="#referencias">Referências</a></li>
+                    <li><a class="extra" href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </header>
-        <div class="left-sidebar">
+        <div class="lado-esquerdo">
             <div>
                 <img id="minha_foto" alt="foto do Tiago" src="https://avatars1.githubusercontent.com/u/68355072?s=460&u=b51db7ba3f1d958425b778c6b9caa434b4189db8&v=4">
             </div>
             <div>
-                <h2 id="licoes_aprendidas">Lições aprendidas</h2>
-                <ol>
+                <h2 id="licoes_1">Lições aprendidas</h2>
+                <ol id="licoes_aprendidas">
                     <li>Fundamentos de Desenvolvimento WEB</li>
                     <li>UNIX</li>
                     <li>SHELL</li>
@@ -41,8 +43,8 @@
                 </ol>
             </div>
             <div>
-                <h2 id="licoes_a_aprender">Lições a Aprender</h2>
-                <ul>
+                <h2 id="licoes_2">Lições a Aprender</h2>
+                <ul id="licoes_a_aprender">
                     <li>JavaScript</li>
                     <li>DOM e Seletores</li>
                     <li>Web Storage</li>
@@ -56,53 +58,91 @@
                 </ul>
             </div>
         </div>
-
-        
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-        <p> enchedor de linguiça</p>
-
-
-
-
+        <div class="lado-direito">
+        <section>
+            <article>
+                <h2 id="sobre_aprendizado">
+                    Sobre o meu aprendizado
+                </h2>
+                <p>
+                    bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto bastante texto 
+                </p>
+                <aside>
+                    <h2 id="breve">um pedaço de texto que não precisa ser realmente muito grande nem nada</h2>
+                </aside>
+                <p>
+                    mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....mais texto.....
+                </p>
+            </article>
+        </section>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+                <p>enchedor de linguiça</p>
+            </div>
+            <div style="clear:both;"></div>
+                <div>
+                    <h2 id="referencias">References</h2>
+                    <a target ="_blank" href="https://css-tricks.com/hash-tag-links-padding/">[1] Como fazer o link interno não se esconder atras do header quando ele é fixo.</a>
+                    <a target="_blank" href="https://www.rapidtables.com/convert/color/hex-to-rgb.html">[2] Conversor de cor hex para RGB</a>
+                </div>
+                <footer id="rodape">
+                    <p>Author: Tiago Minoru Yoneda</p>
+                    <p><a id="contact" target="_blank" href="https://github.com/tiago-yoneda">Meu perfil Github</a></p>
+                    <p></p>
+                </footer>
+                <p style="text-align:center"><a href="#TOP">TOP</a></p>
     </body>
 </html>
