Adicionar style no rodape

--- a/index.html
+++ b/index.html
@@ -93,8 +93,10 @@
         </section>
         <footer id="rodape">
             <!-- https://github.com/gabrielgarciamendonca/gabrielgarciamendonca/edit/main/README.md  | Utilizado para buscar o endereço da imagem do icone do linkedin -->
-            <a href="https://www.linkedin.com/in/mendoncag/" target="_Blank"><img
+            <a href="https://www.linkedin.com/in/mendoncag/" target="_Blank"><img class="links_logos"
                     src="https://img.shields.io/badge/linkedin-%230077B5.svg?&style=for-the-badge&logo=linkedin&logoColor=white" /></a>
+            <a href="https://github.com/gabrielgarciamendonca" target="_Blank"><img class="links_logos"
+                    src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" /></a>
         </footer>
     </main>
 
