correçao no link para abrir em nova aba

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <main>
         <img src="Assets/fotoPerfil.jpg" alt="Foto de um homem de frente" id="minha_foto">
-        <a href="https://www.linkedin.com/in/pedro-henrique-497b411b6/" id="linkedin">Linkedin</a>
+        <a href="https://www.linkedin.com/in/pedro-henrique-497b411b6/" target="_blank" id="linkedin">Linkedin</a>
         <ol id="licoes_aprendidas">
             <li>Unix</li>
             <li>Git</li>
