--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1 id="titulo">Lições Aprendidas - Trybe</h1>
     </header>
     <img id="minha_foto" src="minha_foto.jpeg" alt="Foto de Micaela">
-    <h2>Lições</h2>
+    <h2>Lições aprendidas</h2>
     <ol id="licoes_aprendidas">
         <li>Unix</li>
         <li>Git</li>
@@ -23,5 +23,18 @@
         <li>Inspect</li>
         <li>Semantic HTML</li>
     </ol>
+    <h2>Lições para aprender</h2>
+    <ul id="licoes_a_aprender">
+        <li>Unix</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Empatia</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Inspect</li>
+        <li>Semantic HTML</li>
+    </ul>
 </body>
 </html>
