--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas - Trybe</h1>
-        <nav>
+        <nav id="navegacao">
             <ul>
-                <li>Home</li>
-                <li>Sobre</li>
+                <li><a href="">Home</a></li>
+                <li><a href="">Sobre</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <div class="imgbox">
         <img id="minha_foto" src="https://user-images.githubusercontent.com/21299113/99570313-822e7e00-29b0-11eb-9806-e0cf7c4a3af1.png" alt="profile_picture">
-        <a href="https://github.com/LucioOSilva" target="blank">Lucio Silva</a>
+        <a href="https://github.com/LucioOSilva" target="_blank">Lucio Silva</a>
         </div>
         <section id="licoes">
             <ol id="licoes_aprendidas">
@@ -52,17 +52,11 @@
         <section>
             <article>
                 <h2>Um pouco sobre meu aprendizado (Trybe)</h2>
-                <p>Na Trybe adquiri muitos conhecimentos, desde o desenvolimento pessoal tratando-se de soft skills, como praticar o auto conhecimento aprimorando a
-                inteligencia emocional entre outras;  Nos últimos blocos e estudos relacionados ao "how-to-code" tive contato com Unix e Bash, também passando
-                pelo git&github para versionamento e controle de código, aprendi também sobre os principais fundamentos da internet e como ela funciona! e ainda
-                tem muito mais por vir!! -> Muito a aprender você ainda tem! "Yoda, the master" <-
-                </p>
+                <p>Na Trybe adquiri muitos conhecimentos, desde desenvolimento pessoal tratando-se de soft skills, praticar o auto conhecimento aprimorando a inteligencia emocional entre outras; Nos últimos blocos e estudos relacionados ao "how-to-code" tive contato com Unix e Bash, também passando pelo git&github para versionamento e controle de código, aprendi também sobre os principais fundamentos da internet e como ela funciona! e ainda tem muito mais por vir!! -> Muito a aprender você ainda tem! "Yoda, the master" <-</p>
             </article>
             <aside>
                 <h2>Sobre mim:</h2>
-                <p>Estudei por um longo tempo, sem ter de fato um tutor ou alguem para me instruir de forma correta e acertiva, fiz diversos cursos e nenhum me tirou
-                do meio do mar de informações que é a área de TI; Por fim conheci a Trybe e hoje sou muito feliz e grato por tudo. "this is the way!"
-                </p>
+                <p>Estudei por um longo tempo, sem ter de fato um tutor ou alguem para me instruir de forma correta e acertiva, fiz diversos cursos e nenhum me tirou do meio do mar de informações que é a área de TI; Por fim conheci a Trybe e hoje sou muito feliz e grato por tudo. "this is the way!"</p>
             </aside>
         </section>
     </main>
