--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned | Trybe</h1>
     </header>
+
     <main>
         <section id="sec-foto">
             <figure>
@@ -68,7 +69,16 @@
         </aside>
     </main>
 
-    <footer id="rodape"></footer>
+    <footer id="rodape">
+        <h3>Contato</h3>
+
+        <table border="5px black">
+            <tr>
+                <th><a href="https://github.com/MatheusMartino97">GitHub</a></th>
+                <th><a href="https://www.linkedin.com/in/matheus-martino/">LinkedIn</a></th>
+            </tr>
+        </table>
+    </footer>
 </body>
 
 </html>
