Bônus - Estilizando main

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
             <li>Node</li>
             <li>SQL</li>
         </ul>
-        <article>
+        <article class="lado-esquerdo">
             <h2>Título Artigo</h2>
             <p>Nessas três semanas de Trybe, foi possível aprender mais sobre Linux, comandos de terminal e rever os conteúdos de Git, CSS e HTML. Mesmo estando um pouco atrasada em relação ao conteúdo de CSS e HTML, é possível notar que a parte assíncrona é cheia de conteúdo externo que nos ajudam a ampliar e conhecer melhor os comandos apresentados no dia. O mais interessante foi conhecer a turma,que mesmo sendo numerosa e extremamente ansiosa, mas todos colaboram para o crescimento de todos.</p>
         </article>
-        <aside>
+        <aside class="lado-esquerdo">
             <p>Acho interessante que não estão nos preparando para o mercardo de trabalho apenas nos apresentando as ferramentas mais utilizadas, mas também preparando nosso emocional para lidar com as adversidades que enfrentaremos num dia-a-dia de trabalho.</p>
         </aside>
         <table>
