--- a/index.html
+++ b/index.html
@@ -11,5 +11,18 @@
           <h1 id="titulo">Lições aprendidas - TRYBE!</h1>
       </header>
       <img id="minha_foto" src="Marcio3.jpg" alt="Foto de Marcio Fujita">
+      <br>
+      <ol id="licoes_aprendidas">
+        <li>Introdução ao Unix</li>
+        <li>Introdução ao Shell</li>
+        <li>Bash</li>
+        <li>Git & GitHub</li>
+        <li>HTML</li>
+        <li>HTML Semântico</li>
+        <li>CSS</li>
+        <li>Introdução às Softskills</li>
+        <li>Introdução à inteligência emocional</li>
+        <li>Companheirismo</li>
+      </ol>
   </body>
 </html>
