--- a/index.html
+++ b/index.html
@@ -13,5 +13,20 @@
     <main>
         <img id="minha_foto" src="assets/Foto Terno.jpeg" alt="Minha foto usando terno">
     </main>
+    <section id="aprendidas">
+        <h2>Lições Aprendidas</h2>
+        <ol id="licoes_aprendidas">
+            <li>Zoom</li>
+            <li>Slack</li>
+            <li>Unix</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>w3schools</li>
+            <li>HTML</li>
+            <li>CSS</li>         
+            <li>Inspect</li>
+            <li>HTML Semântico</li>
+        </ol>
+    </section>
   </body>
 </html>
