--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     melhorei a minha comunicação através de entrevistas que é uma fase do processo seletivo da Trybe.
     As aulas iniciaram em Novembro, desde então o meu aprendizado está sendo bastante intenso, reconhecendo
     desafios e superando-os com ajuda do time Trybe.</p>
+</article>
 
   <ol id="licoes_aprendidas">
   <li>Git;</li>
