--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title> <h1>cabecalho</h1> </title>
       <hi> </hi>
     </title>
-  <link rel="stylesheet" type="css"  href="style.css"/>
+  <link rel="stylesheet" type="text/css"  href="style.css"/>
 
 </head>
 
